--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>3D Soft Engine using HTML5 Canvas</title>
+    <title>Quake MDL 3D Soft Engine using HTML5 Canvas</title>
     <style>
         /*canvas {
             width: 100%;
