--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <script src="SoftEngine.js"></script>
     <script src="main.js"></script>
 </head>
-<body>
-    <canvas id="frontBuffer" width="800" height="600" style="background-color: black;"></canvas>
+<body id="body">
+    <canvas id="frontBuffer" width="800" height="600" style="background-color: black;" tabindex="1"></canvas>
     <span id="debug"></span>
 </body>
 </html>
